--- a/src/components/splash/splashScreen.scss
+++ b/src/components/splash/splashScreen.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: $background-color;
+  background-color: $primary-color;
   display: flex;
   flex-direction: column;
   align-items: center;
