--- a/src/components/socialLinks/socialLinks.scss
+++ b/src/components/socialLinks/socialLinks.scss
@@ -4,23 +4,27 @@
 
 .social-links {
   @include flex-space-between;
-  @include flex-column;
   position: absolute;
-  top: 155px;
-  gap: 25px;
+  gap: 35px;
   padding: 15px;
   z-index: 1;
   background-color: $background-color;
   border-radius: $border-radius;
+  top: 50%;
 
   @include respond-to(tablet) {
-    top: 80px;
+    top: 45%;
     gap: $spacing-xl-tablet;
     padding: $spacing-sm-tablet;
+    flex-wrap: wrap;
+    max-width: 180px;
   }
 
   @include respond-to(mobile) {
     gap: $spacing-xl-mobile;
+    position: relative;
     padding: $spacing-xs-mobile;
+    flex-wrap: nowrap;
+    max-width: max-content;
   }
 }
